--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,6 +62,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true  # Aktiviert die Generierung von Lokalisierungsdateien
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -68,9 +71,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/animations/
-    - assets/icons/
     - assets/images/
+    - assets/icons/
+    - assets/animations/
+    - assets/leo/
     - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
