--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   google_fonts: ^6.1.0
   lottie: ^2.7.0
   image_picker: ^1.0.5
+  # QR-Code Scanner Abhängigkeit
+  mobile_scanner: ^3.5.5
+  # QR-Code Generierung für Gutscheine
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
